...
    <string name="enter_text">Enter text</string>
    <string name="enter_long_text">Enter long text</string>
    <string name="enter_date">Enter date (yyyy.mm.dd)</string>
    <string name="find_option">Find option</string>

    <string name="upload">Upload</string>
    <string name="login_button">Log in</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>


    <string name="list_view_header_title">Disease/Condition/Event</string>
    <string name="list_view_header_under_5_title">&lt; 5 Years old</string>
    <string name="list_view_header_case_title">Cases</string>
...
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="server_url">Enter server URL</string>

    <!-- String resources for aggregate report fragment -->
    <string name="choose">Choose</string>
    <string name="choose_data_set">Choose data set</string>
    <string name="choose_program">Choose program</string>
    <string name="choose_unit">Choose organisation unit</string>
    <string name="choose_period">Choose period</string>
    <string name="search">Search</string>

    <!-- String resources for single event without registration fragment -->
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="coordinates">Coordinates</string>
...
    <string name="choose_report_date">Choose report date</string>

    <!-- String resources for downloader fragment -->
    <string name="download_forms">Download forms</string>

    <!-- menu items -->
    <string name="aggregate_reporting">Aggregate Report</string>
    <string name="profile">Profile</string>

    <!-- Basic strings -->
    <string name="organization_unit">Organisation Unit</string>
    <string name="description">Description</string>
    <string name="dataset">Data set</string>
    <string name="program">Program</string>
...
