...
            android:textColor="@drawable/organization_unit_textview_color_state"
            android:textSize="10sp"
            app:font="@string/regular_font_name"
            android:visibility="gone" />

        <TextView
            android:text="@string/open_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/actionbar_blue"
...
